[gd_scene load_steps=16 format=3 uid="uid://dyxkqi0ap1v8w"]

[ext_resource type="PackedScene" uid="uid://bxfnryenhqalq" path="res://scenes/level_completed_txt.tscn" id="1_7wu3j"]
[ext_resource type="Script" path="res://scripts/level_completed_menu.gd" id="1_pkwcq"]
[ext_resource type="PackedScene" uid="uid://dkiii52fop4ev" path="res://scenes/star_container.tscn" id="2_e7mgt"]
[ext_resource type="FontFile" uid="uid://cjvqvwtt2n4g7" path="res://assets/fonts/PixelOperator8.ttf" id="3_6bxak"]
[ext_resource type="Texture2D" uid="uid://mwm3humh3ied" path="res://assets/sprites/Wooden Pixel Art GUI 32x32.png" id="4_6ev1i"]
[ext_resource type="Script" path="res://scripts/home_btn.gd" id="5_4koj5"]
[ext_resource type="Script" path="res://scripts/restart_btn.gd" id="5_hxsuc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7at8c"]
atlas = ExtResource("4_6ev1i")
region = Rect2(386, 640, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpink"]
atlas = ExtResource("4_6ev1i")
region = Rect2(386, 672, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjekc"]
atlas = ExtResource("4_6ev1i")
region = Rect2(354, 640, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feyd2"]
atlas = ExtResource("4_6ev1i")
region = Rect2(354, 672, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57jr3"]
atlas = ExtResource("4_6ev1i")
region = Rect2(290, 576, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0fle"]
atlas = ExtResource("4_6ev1i")
region = Rect2(290, 608, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwv57"]
atlas = ExtResource("4_6ev1i")
region = Rect2(418, 448, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxspx"]
atlas = ExtResource("4_6ev1i")
region = Rect2(418, 480, 92, 32)

[node name="level_completed_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkwcq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(33.7984, 25.0055)
color = Color(0, 0, 0, 0.392157)

[node name="level_completed_txt" parent="." instance=ExtResource("1_7wu3j")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.234568
anchor_right = 0.5
anchor_bottom = 0.234568
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
metadata/_edit_use_anchors_ = true

[node name="star_container" parent="." instance=ExtResource("2_e7mgt")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -28.0
offset_right = 34.0
offset_bottom = -5.99997
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.08, 4.08)

[node name="time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -124.0
offset_right = 128.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 16)
theme_override_colors/font_color = Color(0.760784, 0.709804, 0.576471, 1)
theme_override_colors/font_outline_color = Color(0.164566, 0.106236, 0.132174, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_6bxak")
theme_override_font_sizes/font_size = 24
text = "Time: 00:00"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 15.0
offset_right = 46.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.0117, 3)
pivot_offset = Vector2(45.9812, 0.160473)
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="restart_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
texture_normal = SubResource("AtlasTexture_7at8c")
texture_pressed = SubResource("AtlasTexture_bpink")
script = ExtResource("5_hxsuc")

[node name="next_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_xjekc")
texture_pressed = SubResource("AtlasTexture_feyd2")

[node name="options_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_57jr3")
texture_pressed = SubResource("AtlasTexture_e0fle")

[node name="home_btn" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_jwv57")
texture_pressed = SubResource("AtlasTexture_xxspx")
script = ExtResource("5_4koj5")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/restart_btn" to="VBoxContainer/HBoxContainer/restart_btn" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/next_btn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/home_btn" to="VBoxContainer/home_btn" method="_on_pressed"]
